# number-grid

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
number_grid/: server.py
number_grid/static/: index.html
